OA-229 Validacao Update e Criacao e correcao nome com espaco R scripts